# airflow-pyspark

./: .gitignore  QUICK_START.md  README.md  README_AIRFLOW_SPARK.md  docker-compose.yml  pyproject.toml  setup_airflow_connections.sh  start.sh  submit.sh  test.sh
create-kb/: README.md  parse-airflow.py  parse_airflow.py
dags/: bronze_to_silver_pipeline_dag.py  example_dag.py  full_ingestion_pipeline.py  ingest_bronze_data_dag.py  silver_to_gold_pipeline_dag.py
notebooks/: README.md  create_bronze_tables.ipynb  create_gold_tables.ipynb  create_silver_tables.ipynb  debug_ingestion.ipynb  spark_cluster_demo.ipynb
plugins/: dag_code.py
source_data/: bronze_campaign_events_raw.csv  bronze_customer_interactions_raw.csv  bronze_inventory_snapshots_raw.csv  bronze_marketing_campaigns_raw.csv  bronze_product_catalog_raw.csv  bronze_subscriptions_raw.csv  bronze_transaction_items_raw.csv  bronze_transactions_raw.csv
spark-apps/: bronze_to_silver_customer_interactions.py  bronze_to_silver_inventory_snapshots.py  bronze_to_silver_product_catalog.py  bronze_to_silver_subscriptions.py  bronze_to_silver_transaction_items.py  bronze_to_silver_transactions.py  complete_test.py  create_bronze_tables.py  create_gold_tables.py  create_sample_data.py  create_silver_tables.py  filter_employees.py  gold_basket_analysis.py  gold_campaign_roi_analysis.py  gold_category_brand_performance.py  gold_channel_attribution.py  gold_cohort_analysis.py  gold_customer_360.py  gold_product_performance.py  gold_store_performance.py  gold_subscription_health.py  hive_external_tables.py  (+9 more)
(+13 files in other folders)
