[project]
name = "airflow-pyspark"
version = "0.1.0"
description = ""
authors = [
    {name = "scalabrese",email = "scalabrese@griddynamics.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark (>=3.5.3,<3.6.0)",
    "notebook (>=7.4.7,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
