[project]
name = "airflow-pyspark"
version = "0.1.0"
description = ""
authors = [
    {name = "scalabrese",email = "scalabrese@griddynamics.com"}
]
readme = "README.md"
requires-python = ">=3.10,<=3.14"
dependencies = [
    "pyspark (>=3.5.3,<3.6.0)",
    "notebook (>=7.4.7,<8.0.0)",
    "apache-airflow==2.7.0",
    "apache-airflow-providers-apache-spark (==4.1.3)",
    "apache-airflow-providers-amazon>=8.0.0,<9.0.0",
    "apache-airflow-providers-postgres>=5.0.0,<6.0.0",
    "neo4j (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"
